<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".views.DetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:id="@+id/frameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="260dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/img_background"
                        android:layout_width="match_parent"
                        android:layout_height="260dp"
                        android:contentDescription="@string/fondo_de_imagen"
                        android:gravity="center"
                        android:scaleType="centerCrop"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="260dp"
                        android:background="@drawable/gradiant" />

                </FrameLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="300dp"
                    android:layout_height="250dp"
                    android:layout_marginBottom="20dp"
                    android:clipToPadding="true"
                    app:cardCornerRadius="15dp"
                    app:layout_constraintBottom_toTopOf="@+id/guideline"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <ImageView
                        android:id="@+id/imgProduct"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/imagen_de_producto"
                        android:scaleType="fitXY" />

                </androidx.cardview.widget.CardView>

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="310dp" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="1dp"
                android:background="@color/black"
                android:orientation="horizontal" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/tvDescriptionTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout"
                tools:text="@string/papas_fritas" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTotalPriceQ"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/price"
                    android:textColor="@color/black"
                    android:textSize="19sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tvDescriptionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/descripci_n"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:textStyle="italic|bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTotalPrice" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDescriptionTitle">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvDescription"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:textColor="@color/black"
                    tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam," />
            </androidx.core.widget.NestedScrollView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvDisponible1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/estado"
                    android:textColor="@color/black"
                    android:textSize="19sp"
                    android:textStyle="italic|bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvDisponible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/green"
                    android:layout_marginStart="8dp"
                    android:textSize="19sp"
                    android:textStyle="italic|bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tvDisponible1"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/ok" />

                <TextView
                    android:id="@+id/tvCategoria1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/categoria"
                    android:textColor="@color/black"
                    android:textSize="19sp"
                    android:textStyle="italic|bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvDisponible" />

                <TextView
                    android:id="@+id/tvCategoria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/green"
                    android:textSize="19sp"
                    android:textStyle="italic|bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tvCategoria1"
                    app:layout_constraintTop_toBottomOf="@+id/tvDisponible"
                    tools:text="Refacción" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnBuyIt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@color/black"
                    android:text="@string/ordenar_ahora"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/tilNewQuantity"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cantidad"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintBottom_toTopOf="@+id/tilNewQuantity"
                    app:layout_constraintEnd_toEndOf="@id/tilNewQuantity"
                    app:layout_constraintStart_toStartOf="@+id/tilNewQuantity" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilNewQuantity"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    app:counterOverflowTextColor="@color/black"
                    app:counterTextColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="@+id/btnBuyIt"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/btnBuyIt"
                    tools:ignore="MissingConstraints">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etNewQuantity"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:ems="3"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:shadowColor="@color/black"
                        android:text="@string/_1"
                        android:textAlignment="center"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/black"
                android:orientation="horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/pide_por_whatsapp"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold|italic" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>